crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT001_default.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: IncorrectFixtureParenthesesStyle
    body: "Use `@pytest.fixture()` over `@pytest.fixture`"
    commit: Add/remove parentheses
    fixable: true
  location:
    row: 9
    column: 1
  end_location:
    row: 9
    column: 15
  fix:
    content: ()
    location:
      row: 9
      column: 15
    end_location:
      row: 9
      column: 15
  parent: ~
- kind:
    name: IncorrectFixtureParenthesesStyle
    body: "Use `@pytest.fixture()` over `@pytest.fixture`"
    commit: Add/remove parentheses
    fixable: true
  location:
    row: 34
    column: 1
  end_location:
    row: 34
    column: 8
  fix:
    content: ()
    location:
      row: 34
      column: 8
    end_location:
      row: 34
      column: 8
  parent: ~
- kind:
    name: IncorrectFixtureParenthesesStyle
    body: "Use `@pytest.fixture()` over `@pytest.fixture`"
    commit: Add/remove parentheses
    fixable: true
  location:
    row: 59
    column: 1
  end_location:
    row: 59
    column: 8
  fix:
    content: ()
    location:
      row: 59
      column: 8
    end_location:
      row: 59
      column: 8
  parent: ~

