crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT001_no_parentheses.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- - kind:
      name: PytestFixtureIncorrectParenthesesStyle
      body: "Use `@pytest.fixture` over `@pytest.fixture()`"
      suggestion: Add/remove parentheses
      fixable: true
    location:
      row: 14
      column: 1
    end_location:
      row: 14
      column: 17
    fix:
      content: ""
      location:
        row: 14
        column: 15
      end_location:
        row: 14
        column: 17
    parent: ~
  - kind:
      name: PytestFixtureIncorrectParenthesesStyle
      body: "Use `@pytest.fixture` over `@pytest.fixture()`"
      suggestion: Add/remove parentheses
      fixable: true
    location:
      row: 24
      column: 1
    end_location:
      row: 26
      column: 1
    fix:
      content: ""
      location:
        row: 24
        column: 15
      end_location:
        row: 26
        column: 1
    parent: ~
  - kind:
      name: PytestFixtureIncorrectParenthesesStyle
      body: "Use `@pytest.fixture` over `@pytest.fixture()`"
      suggestion: Add/remove parentheses
      fixable: true
    location:
      row: 39
      column: 1
    end_location:
      row: 39
      column: 10
    fix:
      content: ""
      location:
        row: 39
        column: 8
      end_location:
        row: 39
        column: 10
    parent: ~
  - kind:
      name: PytestFixtureIncorrectParenthesesStyle
      body: "Use `@pytest.fixture` over `@pytest.fixture()`"
      suggestion: Add/remove parentheses
      fixable: true
    location:
      row: 49
      column: 1
    end_location:
      row: 51
      column: 1
    fix:
      content: ""
      location:
        row: 49
        column: 8
      end_location:
        row: 51
        column: 1
    parent: ~
  - kind:
      name: PytestFixtureIncorrectParenthesesStyle
      body: "Use `@pytest.fixture` over `@pytest.fixture()`"
      suggestion: Add/remove parentheses
      fixable: true
    location:
      row: 64
      column: 1
    end_location:
      row: 64
      column: 10
    fix:
      content: ""
      location:
        row: 64
        column: 8
      end_location:
        row: 64
        column: 10
    parent: ~
  - kind:
      name: PytestFixtureIncorrectParenthesesStyle
      body: "Use `@pytest.fixture` over `@pytest.fixture()`"
      suggestion: Add/remove parentheses
      fixable: true
    location:
      row: 74
      column: 1
    end_location:
      row: 76
      column: 1
    fix:
      content: ""
      location:
        row: 74
        column: 8
      end_location:
        row: 76
        column: 1
    parent: ~

