crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT002.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- - kind:
      name: PytestFixturePositionalArgs
      body: "Configuration for fixture `my_fixture` specified via positional args, use kwargs"
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 1
    end_location:
      row: 14
      column: 25
    fix: ~
    parent: ~
  - kind:
      name: PytestFixturePositionalArgs
      body: "Configuration for fixture `my_fixture` specified via positional args, use kwargs"
      suggestion: ~
      fixable: false
    location:
      row: 19
      column: 1
    end_location:
      row: 19
      column: 39
    fix: ~
    parent: ~

