crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT006_csv.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: PytestParametrizeNamesWrongType
    body: "Wrong name(s) type in `@pytest.mark.parametrize`, expected `csv`"
    suggestion: "Use a `csv` for parameter names"
    fixable: true
  location:
    row: 24
    column: 25
  end_location:
    row: 24
    column: 45
  fix:
    edits:
      - location:
          row: 24
          column: 25
        end_location:
          row: 24
          column: 45
        content: "\"param1,param2\""
  parent: ~
- kind:
    name: PytestParametrizeNamesWrongType
    body: "Wrong name(s) type in `@pytest.mark.parametrize`, expected `csv`"
    suggestion: "Use a `csv` for parameter names"
    fixable: true
  location:
    row: 29
    column: 25
  end_location:
    row: 29
    column: 36
  fix:
    edits:
      - location:
          row: 29
          column: 25
        end_location:
          row: 29
          column: 36
        content: "\"param1\""
  parent: ~
- kind:
    name: PytestParametrizeNamesWrongType
    body: "Wrong name(s) type in `@pytest.mark.parametrize`, expected `csv`"
    suggestion: "Use a `csv` for parameter names"
    fixable: true
  location:
    row: 34
    column: 25
  end_location:
    row: 34
    column: 45
  fix:
    edits:
      - location:
          row: 34
          column: 25
        end_location:
          row: 34
          column: 45
        content: "\"param1,param2\""
  parent: ~
- kind:
    name: PytestParametrizeNamesWrongType
    body: "Wrong name(s) type in `@pytest.mark.parametrize`, expected `csv`"
    suggestion: "Use a `csv` for parameter names"
    fixable: true
  location:
    row: 39
    column: 25
  end_location:
    row: 39
    column: 35
  fix:
    edits:
      - location:
          row: 39
          column: 25
        end_location:
          row: 39
          column: 35
        content: "\"param1\""
  parent: ~
- kind:
    name: PytestParametrizeNamesWrongType
    body: "Wrong name(s) type in `@pytest.mark.parametrize`, expected `csv`"
    suggestion: "Use a `csv` for parameter names"
    fixable: true
  location:
    row: 44
    column: 25
  end_location:
    row: 44
    column: 50
  fix:
    edits: []
  parent: ~
- kind:
    name: PytestParametrizeNamesWrongType
    body: "Wrong name(s) type in `@pytest.mark.parametrize`, expected `csv`"
    suggestion: "Use a `csv` for parameter names"
    fixable: true
  location:
    row: 49
    column: 25
  end_location:
    row: 49
    column: 46
  fix:
    edits: []
  parent: ~

