crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT007_list_of_lists.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 34
    end_location:
      row: 4
      column: 40
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 11
      column: 4
    end_location:
      row: 14
      column: 5
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 12
      column: 8
    end_location:
      row: 12
      column: 14
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 8
    end_location:
      row: 13
      column: 14
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 22
      column: 4
    end_location:
      row: 25
      column: 5
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 39
      column: 8
    end_location:
      row: 39
      column: 14
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 40
      column: 8
    end_location:
      row: 40
      column: 14
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 81
      column: 37
    end_location:
      row: 81
      column: 53
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 81
      column: 38
    end_location:
      row: 81
      column: 44
    fix: ~
    parent: ~
  - kind:
      name: PytestParametrizeValuesWrongType
      body: "Wrong values type in `@pytest.mark.parametrize` expected `list` of `list`"
      suggestion: ~
      fixable: false
    location:
      row: 81
      column: 46
    end_location:
      row: 81
      column: 52
    fix: ~
    parent: ~

