crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT007_tuple_of_lists.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
---
./resources/test/fixtures/flake8_pytest_style/PT007.py:12:9: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
12 |     ("param1", "param2"),
13 |     (
14 |         (1, 2),
   |         ^^^^^^ PT007
15 |         (3, 4),
16 |     ),
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:13:9: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
13 |     (
14 |         (1, 2),
15 |         (3, 4),
   |         ^^^^^^ PT007
16 |     ),
17 | )
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:31:35: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
31 | @pytest.mark.parametrize("param", [1, 2])
   |                                   ^^^^^^ PT007
32 | def test_list(param):
33 |     ...
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:38:5: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
38 |   @pytest.mark.parametrize(
39 |       ("param1", "param2"),
40 |       [
   |  _____^
41 | |         (1, 2),
42 | |         (3, 4),
43 | |     ],
   | |_____^ PT007
44 |   )
45 |   def test_list_of_tuples(param1, param2):
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:39:9: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
39 |     ("param1", "param2"),
40 |     [
41 |         (1, 2),
   |         ^^^^^^ PT007
42 |         (3, 4),
43 |     ],
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:40:9: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
40 |     [
41 |         (1, 2),
42 |         (3, 4),
   |         ^^^^^^ PT007
43 |     ],
44 | )
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:49:5: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
49 |   @pytest.mark.parametrize(
50 |       ("param1", "param2"),
51 |       [
   |  _____^
52 | |         [1, 2],
53 | |         [3, 4],
54 | |     ],
   | |_____^ PT007
55 |   )
56 |   def test_list_of_lists(param1, param2):
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:60:5: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
60 |   @pytest.mark.parametrize(
61 |       "param1,param2",
62 |       [
   |  _____^
63 | |         [1, 2],
64 | |         [3, 4],
65 | |     ],
   | |_____^ PT007
66 |   )
67 |   def test_csv_name_list_of_lists(param1, param2):
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:71:5: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
71 |   @pytest.mark.parametrize(
72 |       "param",
73 |       [
   |  _____^
74 | |         [1, 2],
75 | |         [3, 4],
76 | |     ],
   | |_____^ PT007
77 |   )
78 |   def test_single_list_of_lists(param):
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:80:31: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
80 | @pytest.mark.parametrize("a", [1, 2])
   |                               ^^^^^^ PT007
81 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
82 | def test_multiple_decorators(a, b, c):
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:81:39: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
81 | @pytest.mark.parametrize("a", [1, 2])
82 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
   |                                       ^^^^^^ PT007
83 | def test_multiple_decorators(a, b, c):
84 |     pass
   |

./resources/test/fixtures/flake8_pytest_style/PT007.py:81:47: PT007 Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `list`
   |
81 | @pytest.mark.parametrize("a", [1, 2])
82 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
   |                                               ^^^^^^ PT007
83 | def test_multiple_decorators(a, b, c):
84 |     pass
   |


