crates/ruff/src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT007_tuple_of_tuples.snap
---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 23
    column: 8
  end_location:
    row: 23
    column: 14
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 24
    column: 8
  end_location:
    row: 24
    column: 14
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 31
    column: 34
  end_location:
    row: 31
    column: 40
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 38
    column: 4
  end_location:
    row: 41
    column: 5
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 49
    column: 4
  end_location:
    row: 52
    column: 5
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 50
    column: 8
  end_location:
    row: 50
    column: 14
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 51
    column: 8
  end_location:
    row: 51
    column: 14
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 60
    column: 4
  end_location:
    row: 63
    column: 5
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 61
    column: 8
  end_location:
    row: 61
    column: 14
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 62
    column: 8
  end_location:
    row: 62
    column: 14
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 71
    column: 4
  end_location:
    row: 74
    column: 5
  fix: ~
  parent: ~
- kind:
    name: ParametrizeValuesWrongType
    body: "Wrong values type in `@pytest.mark.parametrize` expected `tuple` of `tuple`"
    commit: ~
    fixable: false
  location:
    row: 80
    column: 30
  end_location:
    row: 80
    column: 36
  fix: ~
  parent: ~

